# rfc-manager

./: Cargo.toml  README.md
src/: lib.rs  rfc_3339.rs
src/serde_format/: mod.rs  rfc_3339.rs  rfc_3339_with_option.rs
